2004-10-11  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: '(C)' -> 'Copyright'.
	* released 2.8.0 tarball; tagged as GHEX_2_8_0.

2004-10-09  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: bumped version to 2.8.0: now we have a reason to.
	* src/findreplace.c: changed all GtkEntries to GtkHex widgets which allow for
	mixed hex/ascii editing of search and replace strings. removed the search type
	selection radio buttons as they are not needed anymore.
	* src/hex-document.[ch]: renamed hex_document_new() to hex_document_new_from_file()
	and added hex_document_new() that creates an empty document. fixed all code to
	respect this.
	* src/gtkhex.[ch]: new function gtk_hex_set_geometry() that allows user to set the
	GtkHex widget dimensions by number of characters per line and number of visible lines.
	* src/gtkhex.c: misc bugfixes.

2004-10-07  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_load): fixed padding and border of window vbox.
	* src/preferences.c (offset_fmt_update_from_entry): new function for updating format
	string with contents from prefs dialog entry.
	(format_focus_out_event_cb): update format string.
	* ghex2.schemas: removed unused gconf keys for print font sizes.
	* major cleanup: contents of ghex.h moved to separate header file for each module
	making up ghex; removed unused #defines and variables left over after more than
	6 years of occasional coding on ghex.

2004-10-06  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.[ch]: renamed gtk_hex_[copy|cut]_clipboard() to
	gtk_hex_[copy|cut]_to_clipboard().
	* src/gtkhex.[ch]: added gtk_hex_clear_selection() and gtk_hex_get_selection(),
	made gtk_hex_set_selection() and gtk_hex_delete_selection() public.
	* src/ghex-window.[ch]: added ghex_window_update_status_message() and use it
	throughout the source.
	* src/ghex-window.c: added selection interval and selection size to status message;
	fixes #151848.
	* src/preferences.c: update the status message after offset format changes;
	fixes #154690.
